2020-08-16         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-07-29         Antonio Giovanni Colombo   <azc100@gmail.com>

	* compila_originale.sh: fixed permission.
	* compila_smallprint.sh: fixed permission.
	* gawk.1: fixed permission.
	* gawktexi.in: fixed permission.
	* texinfo.tex: fixed permission.

2020-07-29         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawk.1: Updated.
	* gawktexi.in: Updated.
	* texinfo.tex: Updated.

2020-06-28         Antonio Giovanni Colombo   <azc100@gmail.com>
                   Marco Curreli              <marcocurreli@tiscali.it>

	* gawk.1: Updated.
	* gawktexi.in: Updated.
	* texinfo.tex: Updated.

2020-05-15         Antonio Giovanni Colombo   <azc100@gmail.com>

	* texinfo.tex: Updated.

2020-05-04         Marco Curreli              <marcocurreli@tiscali.it>

	* gawktexi.in: Updated.

2020-04-19         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawk.1: Updated.
	* gawktexi.in: Updated.

2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.1.0: Release tar ball made.

2020-04-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-04-01         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawk.1: Updated.
	* gawktexi.in: Updated.

2020-03-20         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-03-19         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-03-16         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* texinfo.tex: Updated.

2020-03-10         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-03-04         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-02-26         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-01-24         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
